pending for the modal view when selecting the hamburger and the picture of the new project

--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -47,6 +47,21 @@
             </div>
           </div>
         </div>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="shade"></div>
+              <img
+                src="https://images.unsplash.com/photo-1672357867195-33fc57085af7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+                alt=""
+              />
+              <div class="description">
+                <h5>Test</h5>
+                <h5><i class="fa-brands fa-youtube"></i></h5>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section>
@@ -93,9 +108,9 @@
       <div class="container">
         <div class="footer">
           <div class="footer__links">
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="mailto:valerow@outlook.com">Contact</a>
+            <a href="https://www.williamsvalero.dev/#about">About</a>
+            <a href="https://www.williamsvalero.dev/#projects">Projects</a>
+            <a href="mailto:valerow@outlook.com" class="'contact">Contact</a>
           </div>
 
           <div class="footer__fs">
