massage royale directory removed

--- a/Williams/index.html
+++ b/Williams/index.html
@@ -200,6 +200,9 @@
             <a href="https://github.com/valerow-creator?tab=repositories">
               <i class="fa-brands fa-github"></i>
             </a>
+            <a href="https://www.youtube.com/@NewbieHappyCoder/playlists">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
           </div>
         </div>
       </div>
